--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <p>Hey! I'm</p>
                                 <h1>Omme Salma</h1>
                                 <h2></h2>
-                                <div class="typed-text">Junior Software Developer, Junior JAVA Developer</div>
+                                <div class="typed-text">J Aspiring AI Researcher, Enthusiast in R&D for Artificial Intelligence, Machine Learning, Numerical Data Embedding, and Knowledge Graph Reasoning </div>   
                             </div>
                             <div class="hero-btn">
                                 
