--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                             <div class="hero-text">
                                 <p>Hey! I'm</p>
                                 <h1>Omme Salma</h1>
-                                <h2></h2>
-                                <div class="typed-text">J Aspiring AI Researcher, Enthusiast in R&D for Artificial Intelligence, Machine Learning, Numerical Data Embedding, and Knowledge Graph Reasoning </div>   
+                                <h3></h3>
+                                <div class="typed-text">Aspiring AI Researcher </div>  
+				<div class="typed-text"> Enthusiast in R&D for Artificial Intelligence, Machine Learning, Numerical Data Embedding, and Knowledge Graph Reasoning </div>  
                             </div>
                             <div class="hero-btn">
                                 
