--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                             <div class="hero-text">
                                 <p>Hey! I'm</p>
                                 <h1>Omme Salma</h1>
-                                <h3></h3>
-                                <div class="typed-text">Aspiring AI Researcher, Enthusiast in R&D for Artificial Intelligence, Machine Learning, Numerical Data Embedding, and Knowledge Graph Reasonin</div>  
+                                <h2></h2>
+                                <div class="typed-text">Aspiring AI Researcher, Enthusiast in R&D for Artificial Intelligence, Machine Learning, Numerical Data Embedding, and Knowledge Graph Reasonin</div>
+				<div class="typed-text">Enthusiast in R&D for Artificial Intelligence, Machine Learning, Numerical Data Embedding, and Knowledge Graph Reasonin</div>  
 		
                             </div>
                             <div class="hero-btn">
